- Fixed a link in main and author - Fixed the other works overlapping css issue

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ a{
 .mainpage__navbar__list_item {
     float: right;
 }
-.merch__discription {
+.merch__description {
     font-family: "Times New Roman";
     background: #7f8e37;
 }
